--- a/index.html
+++ b/index.html
@@ -98,16 +98,9 @@
 
             try {
                 // --- ИСПРАВЛЕННЫЙ БЛОК ---
+                // Делаем запрос к нашему API
+                const response = await fetch(`${API_BASE_URL}/api/get_my_requests`, { ... });
                 // Формируем URL безопасно, чтобы избежать двойных или отсутствующих слэшей.
-                const url = new URL('/api/get_my_requests', API_BASE_URL).href;
-                
-                // Делаем запрос к нашему API по правильно сформированному URL
-                const response = await fetch(url, {
-                    headers: {
-                        // Отправляем данные для авторизации
-                        'Authorization': `tma ${tg.initData}`
-                    }
-                });
                 // --- КОНЕЦ ИСПРАВЛЕННОГО БЛОКА ---
 
                 if (!response.ok) {
@@ -175,3 +168,4 @@
 
 </body>
 </html>
+
