--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script>
         // 🔥 ВАЖНО: Вставьте сюда ваш АКТУАЛЬНЫЙ URL от ngrok
-        const API_BASE_URL = "https://your-ngrok-url.ngrok-free.app";
+        const API_BASE_URL = "https://unvigilantly-unmicrobial-bianca.ngrok-free.dev";
 
         const tg = window.Telegram.WebApp;
         
@@ -60,3 +60,4 @@
     </script>
 </body>
 </html>
+
