--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     method: 'GET', // Явно указываем метод
                     headers: {
                         'Authorization': `tma ${tg.initData}`
+                        'ngrok-skip-browser-warning': 'true'
                     }
                 });
 
@@ -60,4 +61,5 @@
     </script>
 </body>
 </html>
+
 
